...
        var title: String {
            switch self {
            case .demo:
                "Demo"

            case .worst:
                "Worst case"

            case .empty:
                "Empty"

            case .one:
                "One"
...
